# posthog-mcp

./: .env.example  README.md  posthog.py  pyproject.toml
.cursor/: mcp.json
posthog_mcp/: __init__.py  __main__.py  server.py
posthog_mcp/core/: client.py  settings.py
posthog_mcp/tools/annotations/: annotations.py
posthog_mcp/tools/docs/: docs.py
posthog_mcp/tools/insights/: insights.py
posthog_mcp/tools/projects/: projects.py
posthog_mcp/tools/queries/: __init__.py  queries.py
